# tocs

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  models.py  pyproject.toml
analysis/: figures.py  log_analysis.py
baselines/: bfs_import.py  config_aware.py  discovery.py  map_builder.py  oracle.py  random_explorer.py
evaluation/: run_eval.py
evaluation/model_adapters/: __init__.py  anthropic.py  base.py  litellm_adapter.py  openai.py
evaluation/prompts/: action.txt  probe.txt  system.txt
generator/: __init__.py  __main__.py  export.py  grammar.py
harness/: actions.py  environment.py  mutations.py  probing.py
metrics/: constraint_discovery.py  gap_analysis.py  map_accuracy.py
paper/: arxiv_abstract.txt  main.tex  references.bib
scripts/: build_arxiv.sh
tests/: test_adapter.py  test_analysis.py  test_baselines.py  test_constraint_discovery.py  test_generator.py  test_grammar.py  test_harness.py  test_metrics.py  test_mutations.py  test_pipeline.py  test_probing.py
tests/fixtures/sample_pipeline/: __init__.py  base.py  ground_truth.json  helpers.py  legacy.py  mod_a.py  mod_b.py  mod_c.py  mod_d.py  models.py  pipeline_config.json  registry.py  runner.py  test_boundaries.py
