[project]
name = "tocs"
version = "0.1.0"
description = "Theory of Code Space: Benchmarking Architectural Belief Construction in Foundation Models"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.0",
    "anthropic>=0.40.0",
    "openai>=1.0",
    "rich>=13.0",
    "typer>=0.9",
    "pytest>=7.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "networkx>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest-cov"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
